--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,80 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Cambria;
+  color: #444;
+}
+
+a {
+  text-decoration: none;
+  color: #444;
+  transition: all 0.3s ease-in-out;
+}
+
+a:hover {
+  color: #dec129;
+}
+
+/* FORM */
+
+form {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  font-size: 0.9em;
+  font-weight: bold;
+  margin-bottom: 0.4em;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  font-size: 0.9em;
+  color: #444;
+  transition: all 0.3s ease-in-out;
+}
+
+input[type="submit"] {
+  background-color: #dec129;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.1em;
+  padding: 10px;
+  border: 1px solid #dec129;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+input[type="submit"]:hover {
+  background-color: #fff;
+  border: 1px solid #dec129;
+  color: #dec129;
+}
+
+.validation-error p {
+  color: #dc3545;
+  font-size: 0.9em;
+  margin-top: 0.4em;
+  border-left: 3px solid #dc3545;
+  padding-left: 0.2em;
+}
