feat: create about components, messages of system, home logic

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>Home</p>
+<div class="home-container">
+  <h1>Veja oque estão compartilhando</h1>
+
+  <div *ngFor="let moment of moments">
+    <h2>{{ moment.title }}</h2>
+  </div>
+</div>
