--- a/src/app/components/pages/moment/moment.component.html
+++ b/src/app/components/pages/moment/moment.component.html
@@ -1,1 +1,25 @@
-<p>moment works!</p>
+<div class="moment" *ngIf="moment">
+  <h1>{{moment.title}}</h1>
+  <img src="{{ baseApiUrl }}uploads/{{ moment.image }}" alt="{{ moment.title }}" />
+  <div class="about-moment">
+    <h3>Sobre este momento:</h3>
+    <p>
+      {{ moment.description }}
+    </p>
+  </div>
+  <div class="actions">
+    <h3>
+      Ações:
+    </h3>
+    <a href="/moments/edit/{{moment.id}}" class="edit-btn">
+      <fa-icon [icon]="faEdit"></fa-icon> Editar
+    </a>
+    <button class="remove-btn">
+      <fa-icon [icon]="faTimes"></fa-icon> Excluir
+    </button>
+  </div>
+  <div class="comments">
+    <h3>Comentários<span>0</span></h3>
+  </div>
+
+</div>
