--- a/src/styles.css
+++ b/src/styles.css
@@ -78,3 +78,45 @@ input[type="submit"]:hover {
   border-left: 3px solid #dc3545;
   padding-left: 0.2em;
 }
+
+/* BUTTONS */
+
+.edit-btn,
+.remove-btn {
+  border: 1px solid #efefef;
+  padding: .4em 1em;
+  font-size: 0.9em;
+  margin: 0 0.5em;
+  cursor: pointer;
+  background-color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+
+button fa-icon,
+a fa-icon {
+  margin-right: 0.2em;
+}
+
+.edit-btn,
+.edit-btn path {
+  border: 1px solid #007bff;
+  color: #007bff;
+}
+
+.edit-btn:hover,
+.edit-btn:hover path {
+  color: #fff;
+  background-color: #007bff;
+}
+
+.remove-btn,
+.remove-btn path {
+  border: 1px solid #DC3545;
+  color: #DC3545;
+}
+
+.remove-btn:hover,
+.remove-btn:hover path {
+  color: #fff;
+  background-color: #DC3545;
+}
