--- a/src/app/components/moment-form/moment-form.component.html
+++ b/src/app/components/moment-form/moment-form.component.html
@@ -1,5 +1,8 @@
 <form (ngSubmit)="submit()" [formGroup]="momentForm" #formDir="ngForm">
   <div class="form-group">
+    <input type="hidden" formControlName="id">
+  </div>
+  <div class="form-group">
     <label for="title">Título:</label>
     <input type="text" placeholder="Coloque um título" formControlName="title" required>
     <div *ngIf="title.invalid && formDir.submitted" class="validation-error">
